readme.md is updated

--- a/Back-end/pyproject.toml
+++ b/Back-end/pyproject.toml
@@ -1,19 +1,30 @@
 [project]
-name = "working"
+name = "back-end"
 version = "0.1.0"
 description = ""
-authors = [
-    {name = "Muhammad-Aman1718",email = "ag3734359@gmail.com"}
-]
+authors = [{ name = "Muhammad-Aman1718", email = "ag3734359@gmail.com" }]
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "fastapi (>=0.116.1,<0.117.0)",
-    "uvicorn[standard] (>=0.35.0,<0.36.0)"
+    "uvicorn (>=0.35.0,<0.36.0)",
+    "sqlalchemy (>=2.0.43,<3.0.0)",
+    "psycopg2-binary (>=2.9.10,<3.0.0)",
+    "pydantic[email] (>=2.11.7,<3.0.0)",
+    "alembic (>=1.16.5,<2.0.0)",
+    "asyncpg (>=0.30.0,<0.31.0)",
+    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
+    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
+    "python-multipart (>=0.0.20,<0.0.21)",
+    "python-dotenv (>=1.1.1,<2.0.0)",
 ]
+[tool.poetry.scripts]
+dev = "back_end.main:start_dev"
+start = "back_end.main:start_prod"
+test = "pytest"
 
 [tool.poetry]
-packages = [{include = "working", from = "src"}]
+packages = [{ include = "back_end", from = "src" }]
 
 
 [build-system]
